<resources>
    <string name="app_name" translatable="false">ecommerce</string>
    <string name="btn_onboarding_join">Gabung Sekarang</string>
    <string name="btn_onboarding_skip">Lewati</string>
    <string name="btn_onboarding_next">Selanjutnya</string>
    <string name="all_login">Masuk</string>
    <string name="all_email" translatable="false">Email</string>
    <string name="all_password" translatable="false">Password</string>
    <string name="all_password_state">Minimal 8 karakter</string>
    <string name="all_email_example">Contoh: test@gmail.com</string>
    <string name="login_separate">atau daftar dengan</string>
    <string name="all_register">Daftar</string>
    <string name="all_agreement_login"><![CDATA[Dengan masuk disini, kamu menyetujui Syarat & Ketentuan serta Kebijakan Privasi TokoPhincon.]]></string>
    <string name="all_agreement_register"><![CDATA[Dengan daftar disini, kamu menyetujui Syarat & Ketentuan serta Kebijakan Privasi TokoPhincon.]]></string>
    <string name="all_terms_conditions"><![CDATA[Syarat & Ketentuan]]></string>
    <string name="all_privacy_policy">Kebijakan Privasi</string>
    <string name="all_email_not_valid">Email tidak valid</string>
    <string name="all_password_not_valid">Password tidak valid</string>
    <string name="all_profil">Profil</string>
    <string name="profile_name">Nama</string>
    <string name="profile_finish">Selesai</string>
    <string name="dialog_title">Pilih Gambar</string>
    <string name="dialog_profile_camera">Kamera</string>
    <string name="dialog_profile_gallery">Galeri</string>
    <string name="all_home" translatable="false">Home</string>
    <string name="all_store" translatable="false">Store</string>
    <string name="all_wishlist" translatable="false">Wishlist</string>
    <string name="all_transaction">Transaksi</string>
    <string name="register_separate">atau masuk dengan</string>
    <string name="all_logout">Keluar</string>
    <string name="home_en" translatable="false">EN</string>
    <string name="home_id" translatable="false">ID</string>
    <string name="home_dark">Gelap</string>
    <string name="home_light">Terang</string>
    <string name="store_empty">Kosong</string>
    <string name="store_empty_desc">Data yang anda minta tidak tersedia</string>
    <string name="all_reset" translatable="false">Reset</string>
    <string name="all_search">Pencarian</string>
    <string name="store_connection_desc">Koneksi anda tidak tersedia</string>
    <string name="store_connection_title">Koneksi</string>
    <string name="all_refresh">Muat Ulang</string>
    <string name="store_filter" translatable="false">Filter</string>
    <string name="all_label_hint" translatable="false">Label</string>
    <string name="item_title_hint" translatable="false">Lenovo Legion 7 16 I7 11800 16GB 1TB SSD RTX3070 8GB</string>
    <string name="item_price_hint" translatable="false">Rp23.499.000</string>
    <string name="item_store_hint" translatable="false">ProStoreComputer</string>
    <string name="item_rating_hint" translatable="false">5.0</string>
    <string name="item_sold_hint">Terjual 10</string>
    <string name="item_sold_title">Terjual</string>
    <string name="bottomsheetfilter_sort">Urutkan</string>
    <string name="bottomsheetfilter_category">Kategori</string>
    <string name="bottomsheetfilter_price">Harga</string>
    <string name="bottomsheetfilter_min">Terendah</string>
    <string name="bottomsheetfilter_max">Tertinggi</string>
    <string name="bottomsheetfilter_showproduct">Tampilkan Produk</string>
    <string name="bottomsheetfilter_review">Ulasan</string>
    <string name="bottomsheetfilter_sold">Penjualan</string>
    <string name="bottomsheetfilter_maxprice">Harga Tertinggi</string>
    <string name="bottomsheetfilter_minprice">Harga Terendah</string>
    <string name="bottomsheetfilter_apple" translatable="false">Apple</string>
    <string name="bottomsheetfilter_asus" translatable="false">Asus</string>
    <string name="bottomsheetfilter_dell" translatable="false">Dell</string>
    <string name="bottomsheetfilter_lenovo" translatable="false">Lenovo</string>
    <string name="all_max">"Maksimal "</string>
    <string name="detail_pick_variant">Pilih varian</string>
    <string name="detail_description_product">Deskripsi produk</string>
    <string name="all_review_buyer">Ulasan pembeli</string>
    <string name="detail_show_all_review">Lihat Semua</string>
    <string name="detail_rating_scala" translatable="false">/5.0</string>
    <string name="detail_desc_review_hint">100% pembeli merasa puas</string>
    <string name="detail_review_count_hint">2 rating · 2 ulasan</string>
    <string name="detail_add_cart">+ Keranjang</string>
    <string name="detail_buy_now">Beli Langsung</string>
    <string name="detail_satisfaction_desc">% pembeli merasa puas</string>
    <string name="detail_rating_desc">rating</string>
    <string name="detail_dot" translatable="false">·</string>
    <string name="detail_review_desc">ulasan</string>
    <string name="all_lorem_ipsum" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="all_username_hint" translatable="false">John Doe</string>
    <string name="all_name">Nama</string>
    <string name="all_price">Harga</string>
    <string name="all_link" translatable="false">Link</string>
    <string name="all_item">Barang</string>
    <string name="detail_success_add">Sukses menambahkan</string>
    <string name="detail_to_wishlist">ke wishlist</string>
    <string name="detail_success_remove">Sukses menghapus</string>
    <string name="detail_from_wishlist">dari wishlist</string>
    <string name="all_cart">Keranjang</string>
    <string name="all_delete">Hapus</string>
    <string name="all_select_all">Pilih Semua</string>
    <string name="all_total_pay">Total Bayar</string>
    <string name="cart_buy">Beli</string>
    <string name="all_stock_not_available">Stock tidak tersedia</string>
    <string name="all_success_update_quantity">Sukses mengupdate kuantiti</string>
    <string name="all_success_add_cart">Sukses menambahkan pada keranjang</string>
    <string name="cart_remains">Sisa</string>
    <string name="all_stock" translatable="false">Stock</string>
    <string name="main_notification">Notifikasi</string>
    <string name="main_cart">Keranjang</string>
    <string name="main_menu">Menu</string>
    <string name="all_checkout">Checkout</string>
    <string name="checkout_pay">Bayar</string>
    <string name="all_payment">Pembayaran</string>
    <string name="all_choose_payment">Pilih Pembayaran</string>
    <string name="checkout_item_buy">Barang yang dibeli</string>
    <string name="payment_virtual_account_hint" translatable="false">Virtual account</string>
    <string name="status_payment_success">Pembayaran Berhasil</string>
    <string name="status_review">Beri Ulasan</string>
    <string name="all_done">Selesai</string>
    <string name="status_detail_transaction">Detail Transaksi</string>
    <string name="status_id_transaction">ID Transaksi</string>
    <string name="status" translatable="false">Status</string>
    <string name="status_date">Tanggal</string>
    <string name="status_time">Waktu</string>
    <string name="status_payment">Metode Pembayaran</string>
    <string name="status_total_payment">Total Pembayaran</string>
    <string name="transaction_shopping">Belanja</string>
    <string name="all_review">Ulas</string>
    <string name="transaction_total_shopping">Total Belanja</string>
    <string name="detail_product">Detail Produk</string>
    <string name="all_success">Berhasil</string>
    <string name="all_fail">Gagal</string>
    <string name="all_notification">Notifikasi</string>
    <string name="notification_desc_hint" translatable="false">Transaksi anda sedang di proses oleh penjual, mohon ditunggu untuk update selanjutnya di aplikasi. Sambil menunggu, anda bisa cari barang lain terlebih dahulu</string>
    <string name="notiication_status_hint">Transaksi Berhasil</string>
    <string name="notification_datetime_hint" translatable="false">12 Jun 2023, 11:45</string>
    <string name="nofitifaction_info">Info</string>
    <string name="wishlist_count_hint">3 Barang</string>
    <string name="main_permission_request_accepted">Permintaan izin diterima</string>
    <string name="main_permission_request_denied">Permintaan izin ditolak</string>
</resources>