<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurface"
    tools:context=".ui.prelogin.onboarding.OnBoardingFragment">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vp_onboarding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@id/btn_onboarding_join"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_onboarding_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_500"
        android:text="@string/btn_onboarding_join"
        app:layout_constraintBottom_toTopOf="@id/tl_onboarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vp_onboarding" />

    <Button
        android:id="@+id/btn_onboarding_skip"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_500"
        android:text="@string/btn_onboarding_skip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_onboarding_join" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tl_onboarding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="?attr/colorSurface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_onboarding_next"
        app:layout_constraintStart_toEndOf="@id/btn_onboarding_skip"
        app:layout_constraintTop_toBottomOf="@id/btn_onboarding_join"
        app:tabGravity="center"
        app:tabIndicator='@null' />

    <Button
        android:id="@+id/btn_onboarding_next"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_500"
        android:text="@string/btn_onboarding_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tl_onboarding"
        app:layout_constraintTop_toBottomOf="@id/btn_onboarding_join" />

</androidx.constraintlayout.widget.ConstraintLayout>